--- a/Day4/pkmn_components/app/views/pokemon/index.html.erb
+++ b/Day4/pkmn_components/app/views/pokemon/index.html.erb
@@ -14,7 +14,7 @@
 
 
 <!-- Pokemon modal view (hidden at first) -->
-<div class="modal fade">
+<div class="modal js-pokemon-modal fade">
   <div class="modal-dialog">
     <div class="modal-content">
 
@@ -24,18 +24,42 @@
         </button>
 
         <h3 class="modal-title">
-          <span>Feraligtr</span>
-          <small>#160</small>
+          <span class="js-pkmn-name">Feraligtr</span>
+          <small class="js-pkmn-number">#160</small>
         </h3>
-      </div><!-- .modal-header -->
+      </div><!-- .mo dal-header -->
 
       <div class="modal-body">
         <dl class="dl-horizontal">
           <dt>Height</dt>
-          <dd>23</dd>
+          <dd class="js-pkmn-height">23</dd>
 
           <dt>Weight</dt>
-          <dd>888</dd>
+          <dd class="js-pkmn-weight">888</dd>
+
+          <dt>Hit Point</dt>
+          <dd class="js-pkmn-hp">888</dd>
+
+          <dt>Attack</dt>
+          <dd class="js-pkmn-attack">888</dd>
+
+          <dt>Defense</dt>
+          <dd class="js-pkmn-defense">888</dd>
+
+          <dt>Weight</dt>
+          <dd class="js-pkmn-weight">888</dd>
+
+          <dt>Sp. Attack</dt>
+          <dd class="js-pkmn-sp-attack">888</dd>
+
+          <dt>Sp. Defense</dt>
+          <dd class="js-pkmn-sp-defense">888</dd>
+
+          <dt>Speed</dt>
+          <dd class="js-pkmn-speed">888</dd>
+
+          <dt class="js-pkmn-type">Type</dt>
+
         </dl>
       </div><!-- .modal-body -->
 
